# praas

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linting.yml
benchmarks/: CMakeLists.txt  config.json.in  dataplane_invocations.json  dataplane_local_invocations.json  functions.json.in  invocations_benchmarker.cpp  local_invocations_benchmarker.cpp
benchmarks/functions/cpp/: functions.cpp  types.hpp
benchmarks/ipc/: benchmaker.cpp  config.json.in  config_second.json.in  functions.json.in  praas.json  praas_benchmarker.cpp  redis.json  redis_benchmarker.cpp  s3.json
benchmarks/ipc/functions/cpp/: functions.cpp  types.hpp
benchmarks/latex-service/: Base64.h  benchmarker_compiling.cpp  benchmarker_compiling_s3.cpp  benchmarker_editing.cpp  benchmarker_editing_s3.cpp  compiling-lambda.json  editing-fargate.json  editing-lambda.json  editing.json
benchmarks/state/: config.json.in  functions.json.in  praas_benchmarker.cpp  put.json  redis.json  s3.json
benchmarks/state/functions/cpp/: functions.cpp  types.hpp
benchmarks/swapper/: benchmarker.cpp  config.json.in  functions.json.in  s3.json
benchmarks/swapper/functions/cpp/: functions.cpp  types.hpp
cmake/: AddTest.cmake  dependencies.cmake
common/include/praas/common/: application.hpp  exceptions.hpp  http.hpp  messages.hpp  sockets.hpp  util.hpp  uuid.hpp
common/src/: http.cpp  messages.cpp  sockets.cpp  util.cpp
common/tests/unit/: messages.cpp  uuid.cpp
control-plane/: CMakeLists.txt
control-plane/cmake/: .dependencies.cmake.swp  dependencies.cmake
control-plane/config/: example.json
control-plane/include/: backend.hpp  http.hpp  server.hpp  worker.hpp
control-plane/include/praas/control-plane/: application.hpp  aws.hpp  backend.hpp  concurrent_table.hpp  config.hpp  deployment.hpp  downscaler.hpp  handle.hpp  http.hpp  poller.hpp  process.hpp  resources.hpp  server.hpp  state.hpp  storage.hpp  tcpserver.hpp  worker.hpp
control-plane/src/: application.cpp  backend.cpp  cli.cpp  config.cpp  deployment.cpp  downscaler.cpp  handle.cpp  http.cpp  opts.cpp  poller.cpp  process.cpp  resources.cpp  server.cpp  tcpserver.cpp  worker.cpp
control-plane/tests/: mocks.hpp
control-plane/tests/integration/: http.cpp
control-plane/tests/unit/: config.cpp  deployment.cpp  http.cpp  mocks.hpp  proc_delete.cpp  proc_swap.cpp  process.cpp  resources.cpp  tcpserver.cpp  tcpserver_dataplane.cpp  tcpserver_swap.cpp
examples/: CMakeLists.txt  Dockerfile.cpp  Dockerfile.python  builder.py  configure.py  install.py
examples/hello-world-cpp/: CMakeLists.txt  functions.json.in  hello_world.cpp
examples/hello-world-python/: functions.json.in  hello_world.py
examples/hello_world_cpp/: CMakeLists.txt
examples/latex-editor-python/: Dockerfile  Dockerfile.texlive  compile.py  files.py  functions.json.in  install.sh  requirements.txt
examples/latex-editor-python-s3/: Dockerfile  compile.py  files.py
examples/state-cpp/: CMakeLists.txt  functions.json.in  state.cpp
process/: CMakeLists.txt
process/cmake/: Config.cmake.in
process/config/: config.json  example.json  example_functions.json
process/controller/include/praas/process/controller/: config.hpp  controller.hpp  messages.hpp  remote.hpp  swapper.hpp  workers.hpp
process/controller/src/: cli.cpp  config.cpp  controller.cpp  messages.cpp  remote.cpp  swapper.cpp  workers.cpp
process/docker/: Dockerfile.builder  Dockerfile.deps  Dockerfile.deps-aws  Dockerfile.process  Dockerfile.process-ipc  Dockerfile.process-python  Dockerfile.process-state  Dockerfile.process-swapper
process/function/include/praas/function/: invocation.hpp
process/function/src/: context.cpp
process/invoker/cpp/: cli.cpp  functions.cpp  functions.hpp  opts.cpp  opts.hpp
process/invoker/function/include/praas/function/: buffer.hpp  context.hpp  invocation.hpp
process/invoker/function/src/: context.cpp  context.hpp
process/invoker/include/praas/function/: invocation.hpp  messages.hpp
process/invoker/include/praas/process/: invoker.hpp
process/invoker/python/: requirements.txt
process/invoker/python/bindings/: function.cpp  invoker.cpp
process/invoker/python/cli/: cli.py
process/invoker/python/pypraas/: __init__.py  buffer.py
process/invoker/src/: invoker.cpp
process/ipc/include/praas/process/ipc/: buffer.hpp  ipc.hpp  messages.hpp
process/ipc/src/: ipc.cpp  messages.cpp
process/lib/include/praas/process/ipc/: messages.hpp
process/lib/src/: ipc.cpp
process/runtime/include/praas/process/runtime/: buffer.hpp  context.hpp  functions.hpp  invocation.hpp
process/runtime/include/praas/process/runtime/internal/: buffer.hpp  functions.hpp  invoker.hpp  state.hpp
process/runtime/include/praas/process/runtime/internal/ipc/: ipc.hpp  messages.hpp
process/runtime/include/praas/process/runtime/ipc/: ipc.hpp  messages.hpp
process/runtime/src/: context.cpp  functions.cpp  ipc.cpp  messages.cpp
process/runtime/src/internal/: functions.cpp  invoker.cpp  ipc.cpp  messages.cpp
process/tests/: CMakeLists.txt
process/tests/integration/: configuration.json  configuration.json.in  get_put.cpp  invocation.cpp  invocation_many_workers.cpp  local_invocation.cpp  remote.cpp  remote_multiple_proc.cpp  state.cpp
process/tests/integration/examples/cpp/: test.cpp  test.hpp
process/tests/integration/examples/python/: test.py
process/tests/unit/: config.cpp  messages.cpp
sdk/: CMakeLists.txt
sdk/include/praas/sdk/: invocation.hpp  praas.hpp  process.hpp
sdk/src/: praas.cpp  process.cpp
serving/: CMakeLists.txt
serving/config/: docker.json
serving/docker/praas-serving/: opts.cpp
serving/fargate/: fargate.py
serving/include/praas/serving/docker/: containers.hpp  server.hpp
serving/src/: cli.cpp  containers.cpp  opts.cpp  server.cpp
tests/integration/: allocation_invocation.cpp  downscaler.cpp  downscaler_control_plane.json  invocation.cpp  scaling.cpp  state_swap.cpp
